Complete the frontend and fetching functionality

--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
+    "lucide": "^0.294.0",
     "lucide-react": "^0.294.0",
     "next": "14.0.3",
-    "react": "^18",
+    "react": "^18.2.0",
     "react-day-picker": "^8.9.1",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
