--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "booking.com-clone",
+  "name": "booking-clone-youtube",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -18,14 +18,13 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
-    "lucide": "^0.294.0",
     "lucide-react": "^0.294.0",
     "next": "14.0.3",
-    "react": "^18.2.0",
+    "react": "^18",
     "react-day-picker": "^8.9.1",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
-    "tailwind-merge": "^2.1.0",
+    "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
   },
